Skip to content

Theora postprocessing

I see that in VLC you can set video postprocessing ouput for other codecs , but i don't see any option to set Theora postprocessing.

In http://svn.xiph.org/trunk/theora/include/theora/theoradec.h , i see some entries for the word post-processing , so i think it is possible to set postprocessing in Theora.

There is a new version of libtheora out : http://downloads.xiph.org/releases/theora/libtheora-1.0alpha8.tar.gz

Quote from : http://lists.xiph.org/pipermail/theora/2007-September/001593.html

alpha8 brings a completely new decoder (feature complete, lifted from derf's theora-exp) and additional control over the encoder (applications now can specify their own set of quantization parameters etc.) amongst other things.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information