codecs: theora: add decoder post processing level (fix #1303)